# qfusion

./: .gitignore  .gitmodules  .travis.yml
source/client/tests/: .gitignore  CMakeLists.txt  README.md  main.cpp  materialifevaluatortest.cpp  materialifevaluatortest.h  materialsourcetest.cpp  materialsourcetest.h  tokensplittertest.cpp  tokensplittertest.h  tokenstreamtest.cpp  tokenstreamtest.h
source/game/: CMakeLists.txt  g_as_local.h  g_ascript.cpp  g_awards.cpp  g_callvotes.cpp  g_clip.cpp  g_cmds.cpp  g_combat.cpp  g_frame.cpp  g_func.cpp  g_gameteams.cpp  g_gametypes.cpp  g_gametypes.h  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_mm.cpp  g_phys.cpp  g_public.h  g_spawn.cpp  g_svcmds.cpp  g_syscalls.cpp  g_syscalls.h  g_target.cpp  g_utils.cpp  g_weapon.cpp  p_client.cpp  p_view.cpp  p_weapon.cpp
source/game/ai/: ai.cpp  ai.h  ai_ascript.cpp  ai_base_ai.cpp  ai_base_ai.h  ai_frame_aware_updatable.h  ai_ground_trace_cache.cpp  ai_ground_trace_cache.h  ai_local.h  ai_manager.cpp  ai_manager.h  ai_precomputed_file_handler.cpp  ai_trajectory_predictor.h  ai_weight_config.cpp  ai_weight_config.h  bot.cpp  bot.h  bot_evolution_manager.cpp  buffer_builder.h  static_vector.h  vec3.h
source/game/ai/awareness/: AlertTracker.cpp  AlertTracker.h  AwarenessLocal.h  AwarenessModule.cpp  AwarenessModule.h  EnemiesTracker.cpp  EnemiesTracker.h  EventsTracker.h  HazardsDetector.h  HazardsSelector.cpp  HazardsSelector.h  PathBlockingTracker.cpp  SelectedEnemies.cpp  SelectedEnemies.h
source/game/ai/combat/: AdvantageProblemSolver.cpp  AdvantageProblemSolver.h  CoverProblemSolver.cpp  CoverProblemSolver.h  DodgeHazardProblemSolver.cpp  DodgeHazardProblemSolver.h  FireTargetCache.cpp  FireTargetCache.h  SideStepDodgeProblemSolver.cpp  SideStepDodgeProblemSolver.h  SpotsProblemSolversLocal.h  TacticalSpotsProblemSolver.cpp  TacticalSpotsProblemSolver.h  TacticalSpotsRegistry.cpp  TacticalSpotsRegistry.h  WeaponSelector.cpp  WeaponSelector.h  WeaponsUsageModule.cpp  WeaponsUsageModule.h
source/game/ai/movement/: BaseMovementAction.cpp  BaseMovementAction.h  BunnyHopAction.cpp  BunnyHopAction.h  BunnyInterpolatingReachChainAction.cpp  BunnyInterpolatingReachChainAction.h  BunnyStraighteningReachChainAction.cpp  BunnyStraighteningReachChainAction.h  BunnyTestingMultipleLookDirsAction.cpp  BunnyTestingMultipleLookDirsAction.h  BunnyTestingMultipleTurnsAction.cpp  BunnyTestingMultipleTurnsAction.h  BunnyTestingNextReachDirsAction.cpp  BunnyToBestClusterPointAction.cpp  BunnyToBestNavMeshPointAction.cpp  (+47 more)
source/game/ascript/: ascript.cpp  local.h
source/qcommon/tests/: .gitignore  CMakeLists.txt  README.md  boundsbuildertest.cpp  boundsbuildertest.h  bufferedreadertest.cpp  bufferedreadertest.h  configstringstoragetest.cpp  configstringstoragetest.h  enumtokenmatchertest.cpp  enumtokenmatchertest.h  main.cpp  staticstringtest.cpp  staticstringtest.h  stringsplittertest.cpp  stringsplittertest.h  stringviewtest.cpp  stringviewtest.h  tonumtest.cpp  tonumtest.h
source/ui_cef/: Animator.cpp  Animator.h  Api.cpp  Api.h  BrowserProcessHandler.cpp  BrowserServerList.cpp  BrowserServerList.h  CMakeLists.txt  CefApp.cpp  CefClient.cpp  CefClient.h  CefStringBuilder.h  Ipc.cpp  Ipc.h  MessagePipe.cpp  MessagePipe.h  MessageReader.h  MessageWriter.h  Process.cpp  RenderProcessHandler.cpp  RenderProcessHandler.h  RendererCompositionProxy.cpp  RendererCompositionProxy.h  ScreenState.cpp  ScreenState.h  UiFacade.cpp  UiFacade.h  V8Handler.cpp  V8Handler.h  ViewAnimator.cpp  ViewAnimator.h
source/ui_cef/syscalls/: DrawWorldModel.cpp  ExecuteCmd.cpp  GetCVar.cpp  GetDemoMetaData.cpp  GetDemosAndSubDirs.cpp  GetGametypes.cpp  GetHuds.cpp  GetLocalizedStrings.cpp  GetMaps.cpp  GetVideoModes.cpp  NativelyDrawnItems.cpp  SetCVar.cpp  SimplexFrontendCalls.cpp  SyscallsForKeys.cpp  SyscallsLocal.cpp  SyscallsLocal.h  ViewAnimParser.cpp  ViewAnimParser.h
(+503 files in other folders)
